navbar align fix

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -24,6 +24,7 @@
         width: 65px;
         height: 55px;
         border-radius: 50%;
+        margin-left: 5px;
     }
 }
 
