--- a/frontend/src/Components/Slider/Slider.css
+++ b/frontend/src/Components/Slider/Slider.css
@@ -1,6 +1,6 @@
 .slider {
   /* border: 1px solid red; */
-  width: 99vw;
+  width: 100%;
   margin: auto;
 }
 .carouselCard {
